<resources>
    <string name="app_name">User Generator App</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
    <string name="find_user">Find User</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="null_string"></string>
    <string name="id">ID</string>
    <string name="address">Address :</string>
    <string name="website">Website :</string>
    <string name="phone">Phone :</string>
    <string name="enter_id">Enter an ID</string>

    <string name="hello_first_fragment">Hello first fragment</string>
</resources>